--- a/pytorch-caip/steps/hypertune/Dockerfile
+++ b/pytorch-caip/steps/hypertune/Dockerfile
@@ -8,5 +8,7 @@ RUN pip install --editable .
 RUN pip install cloudml-hypertune
 RUN pip install fastBPE sacremoses
 
-ENTRYPOINT [ "bash", "train.sh" ]
+COPY ./train.sh /
+
+ENTRYPOINT [ "bash", "/train.sh" ]
 #--task language_modeling   data-bin/wikitext-103   --save-dir checkpoints/transformer_wikitext-103   --arch transformer_lm --share-decoder-input-output-embed   --dropout 0.1   --optimizer adam --adam-betas '(0.9, 0.98)' --weight-decay 0.01 --clip-norm 0.0   --lr 0.0005 --lr-scheduler inverse_sqrt --warmup-updates 4000 --warmup-init-lr 1e-07   --tokens-per-sample 512 --sample-break-mode none   --max-tokens 1024 --update-freq 16   --fp16   --max-update 500
