--- a/pytorch-caip/steps/hypertune/cloudbuild.yaml
+++ b/pytorch-caip/steps/hypertune/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
     - name: 'gcr.io/cloud-builders/docker'
       dir:  .
-      args: [ 'build', '-t', 'gcr.io/${PROJECT_ID}/fairseq-lm:latest', '.' ]
+      args: [ 'build', '-t', 'gcr.io/${PROJECT_ID}/fairseq-lm-train:latest', '.' ]
 images:
-    - 'gcr.io/${PROJECT_ID}/fairseq-lm:latest'
+    - 'gcr.io/${PROJECT_ID}/fairseq-lm-train:latest'
 
 
